alsasrc: fail gracefully when ALSA does not give timestamps

https://bugzilla.gnome.org/show_bug.cgi?id=660170